--- a/aprender.html
+++ b/aprender.html
@@ -23,10 +23,10 @@
 
 <section class="flex imagens">
 <div class="dog">
-    <img src="/home/matheuscouto/git/estudo/css/dogs.jpeg">
-    <img src="/home/matheuscouto/git/estudo/css/dog2.jpeg">
-    <img src="/home/matheuscouto/git/estudo/css/dog3.jpeg">
-    <img src="/home/matheuscouto/git/estudo/css/house.jpeg">
+    <img src="./dogs.jpeg">
+    <img src="./dog2.jpeg">
+    <img src="./dog3.jpeg">
+    <img src="./house.jpeg">
 
 
 </div>
